Added redis for local testing
